--- a/projects/yarn/tests/CMakeLists.txt
+++ b/projects/yarn/tests/CMakeLists.txt
@@ -34,6 +34,7 @@ target_link_libraries(${tests_name}
     annotations
     options
     formatters
+    probing
     yarn.dia
     yarn.json
     quilt.cpp
