cmake: add new external model to build

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -201,6 +201,7 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/projects/stitcher/include
     ${CMAKE_SOURCE_DIR}/projects/wale/include
     ${CMAKE_SOURCE_DIR}/projects/probing/include
+    ${CMAKE_SOURCE_DIR}/projects/external/include
     )
 
 #
@@ -224,6 +225,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stitch)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stitcher)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/wale)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/probing)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external)
 
 # test models
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test_models)
