yarn.dia/json: plug new transforms into initialisation

--- a/projects/yarn.json/src/CMakeLists.txt
+++ b/projects/yarn.json/src/CMakeLists.txt
@@ -31,8 +31,8 @@ set_target_properties(${name}
 
 target_link_libraries(${name}
     utility
-    formatters
     annotations
+    external
     yarn
     ${LIBXML2_LIBRARIES}
     ${Boost_LIBRARIES})
