yarn.json: rename model to external.json

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -186,7 +186,7 @@ include_directories(
     # real code
     ${CMAKE_SOURCE_DIR}/projects/dia/include
     ${CMAKE_SOURCE_DIR}/projects/yarn/include
-    ${CMAKE_SOURCE_DIR}/projects/yarn.json/include
+    ${CMAKE_SOURCE_DIR}/projects/external.json/include
     ${CMAKE_SOURCE_DIR}/projects/yarn.dia/include
     ${CMAKE_SOURCE_DIR}/projects/options/include
     ${CMAKE_SOURCE_DIR}/projects/quilt.cpp/include
@@ -210,7 +210,7 @@ include_directories(
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/input_models)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dia)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/yarn)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/yarn.json)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external.json)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/yarn.dia)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/options)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/quilt.cpp)
