input models: update external and model paths

--- a/projects/dogen.input_models/CMakeLists.txt
+++ b/projects/dogen.input_models/CMakeLists.txt
@@ -96,19 +96,19 @@ if (DOGEN_KNITTER_EXECUTABLE)
     # set(common_arguments ${common_arguments} "--probe-stats-org-mode")
 
     # main input models
-    set(models annotations)
-    set(models ${models} dia)
-    set(models ${models} formatters)
-    set(models ${models} options)
-    set(models ${models} probing)
-    set(models ${models} external)
-    set(models ${models} external.dia)
-    set(models ${models} external.json)
-    set(models ${models} quilt.cpp)
-    set(models ${models} quilt.csharp)
-    set(models ${models} stitch)
-    set(models ${models} wale)
-    set(models ${models} yarn)
+    set(models dogen.annotations)
+    set(models ${models} dogen.dia)
+    set(models ${models} dogen.formatters)
+    set(models ${models} dogen.options)
+    set(models ${models} dogen.probing)
+    set(models ${models} dogen.external)
+    set(models ${models} dogen.external.dia)
+    set(models ${models} dogen.external.json)
+    set(models ${models} dogen.quilt.cpp)
+    set(models ${models} dogen.quilt.csharp)
+    set(models ${models} dogen.stitch)
+    set(models ${models} dogen.wale)
+    set(models ${models} dogen.yarn)
     # models that are not yet ready
     # set(models ${models} pleat)
     # set(models ${models} dart)
