generation.cpp: regenerate model with latest knitter

--- a/projects/dogen.input_models/CMakeLists.txt
+++ b/projects/dogen.input_models/CMakeLists.txt
@@ -104,7 +104,7 @@ if (DOGEN_KNITTER_EXECUTABLE)
     set(models ${models} dogen.external)
     set(models ${models} dogen.external.dia)
     set(models ${models} dogen.external.json)
-    set(models ${models} dogen.quilt.cpp)
+    set(models ${models} dogen.generation.cpp)
     set(models ${models} dogen.quilt.csharp)
     set(models ${models} dogen.stitch)
     set(models ${models} dogen.wale)
