input models: update generation.csharp diagram after rename

--- a/projects/dogen.input_models/CMakeLists.txt
+++ b/projects/dogen.input_models/CMakeLists.txt
@@ -105,7 +105,7 @@ if (DOGEN_KNITTER_EXECUTABLE)
     set(models ${models} dogen.external.dia)
     set(models ${models} dogen.external.json)
     set(models ${models} dogen.generation.cpp)
-    set(models ${models} dogen.quilt.csharp)
+    set(models ${models} dogen.generation.csharp)
     set(models ${models} dogen.stitch)
     set(models ${models} dogen.wale)
     set(models ${models} dogen.modeling)
