--- a/projects/dogen.input_models/CMakeLists.txt
+++ b/projects/dogen.input_models/CMakeLists.txt
@@ -104,6 +104,7 @@ if (DOGEN_KNITTER_EXECUTABLE)
     set(models ${models} dogen.external)
     set(models ${models} dogen.external.dia)
     set(models ${models} dogen.external.json)
+    set(models ${models} dogen.generation)
     set(models ${models} dogen.generation.cpp)
     set(models ${models} dogen.generation.csharp)
     set(models ${models} dogen.modeling)
